Stock application working using apache-axis2

--- a/quick-catchup-parent/pom.xml
+++ b/quick-catchup-parent/pom.xml
@@ -8,9 +8,31 @@
     <artifactId>quick-catchup-parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <java.version>1.8</java.version>
+        <maven.compiler.version>3.2</maven.compiler.version>
+    </properties>
+
     <modules>
         <module>spring-aop-stuff</module>
+        <module>apache-axis2-stuff</module>
     </modules>
 
+    <build>
+    <finalName>QuickCatchup</finalName>
+
+    <plugins>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven.compiler.version}</version>
+        <configuration>
+            <source>${java.version}</source>
+            <target>${java.version}</target>
+        </configuration>
+    </plugin>
+    </plugins>
+    </build>
 
 </project>
