--- a/quick-catchup-parent/gwt-stuff/src/main/webapp/WEB-INF/web.xml
+++ b/quick-catchup-parent/gwt-stuff/src/main/webapp/WEB-INF/web.xml
@@ -5,20 +5,31 @@
          version="2.5"
          xmlns="http://java.sun.com/xml/ns/javaee">
 
-  <!-- Servlets -->
-  <servlet>
-    <servlet-name>greetServlet</servlet-name>
-    <servlet-class>com.quick.catchup.stockwatcher.server.GreetingServiceImpl</servlet-class>
-  </servlet>
-  
-  <servlet-mapping>
-    <servlet-name>greetServlet</servlet-name>
-    <url-pattern>/stockwatcher/greet</url-pattern>
-  </servlet-mapping>
-  
-  <!-- Default page to serve -->
-  <welcome-file-list>
-    <welcome-file>StockWatcher.html</welcome-file>
-  </welcome-file-list>
+    <!-- Servlets -->
+    <servlet>
+        <servlet-name>greetServlet</servlet-name>
+        <servlet-class>com.quick.catchup.stockwatcher.server.GreetingServiceImpl</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>greetServlet</servlet-name>
+        <url-pattern>/stockwatcher/greet</url-pattern>
+    </servlet-mapping>
+
+
+    <!-- Servlets -->
+    <servlet>
+        <servlet-name>stockPriceServiceImpl</servlet-name>
+        <servlet-class>com.quick.catchup.stockwatcher.server.StockPriceServiceImpl</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>stockPriceServiceImpl</servlet-name>
+        <url-pattern>/stockwatcher/stockPrices</url-pattern>
+    </servlet-mapping>
+    <!-- Default page to serve -->
+    <welcome-file-list>
+        <welcome-file>StockWatcher.html</welcome-file>
+    </welcome-file-list>
 
 </web-app>
