neo4j working examples using cipher query as well

--- a/quick-catchup-parent/pom.xml
+++ b/quick-catchup-parent/pom.xml
@@ -19,6 +19,7 @@
         <module>spring-aop-stuff</module>
         <module>apache-axis2-stuff</module>
         <module>gwt-stuff</module>
+        <module>neo4j-scala-stuff</module>
     </modules>
 
     <build>
