commit map reduce small example with latest hadoop

--- a/quick-catchup-parent/pom.xml
+++ b/quick-catchup-parent/pom.xml
@@ -20,6 +20,7 @@
         <module>apache-axis2-stuff</module>
         <module>gwt-stuff</module>
         <module>neo4j-scala-stuff</module>
+        <module>map-reduce-stuff</module>
     </modules>
 
     <build>
